WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111986
[EFL] accessibility/aria-invalid is failing
https://bugs.webkit.org/show_bug.cgi?id=111986
Summary
[EFL] accessibility/aria-invalid is failing
Krzysztof Czech
Reported
2013-03-11 06:54:51 PDT
accessibility/aria-invalid is failing is failing on all EFL platforms.
Attachments
Patch
(6.58 KB, patch)
2013-09-23 03:41 PDT
,
Krzysztof Czech
mario
: review-
Details
Formatted Diff
Diff
Patch
(6.44 KB, patch)
2013-09-23 06:36 PDT
,
Krzysztof Czech
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Denis Nomiyama (dnomi)
Comment 1
2013-09-20 09:23:24 PDT
The implementation of aria-invalid has been added to the GTK port in
bug 98350
and
bug 121668
. The EFL port can also use this code by implementing a small piece of code at: Tools/DumpRenderTree/atk/AccessibilityCallbacksAtk.cpp - axObjectEventListener() - addAccessibilityNotificationHandler() - removeAccessibilityNotificationHandler() and Tools/WebKitTestRunner/InjectedBundle/atk/AccessibilityNotificationHandlerAtk.cpp - axObjectEventListener() - setNotificationFunctionCallback() - removeAccessibilityNotificationHandler() Currently there is only implementation for the GTK platform (e.g. #if PLATFORM(GTK)), and the code needs basically to get the JS context.
Krzysztof Czech
Comment 2
2013-09-23 01:27:59 PDT
(In reply to
comment #1
)
> The implementation of aria-invalid has been added to the GTK port in
bug 98350
and
bug 121668
. > The EFL port can also use this code by implementing a small piece of code at: >
Great, I will take a look at this. Thanks
Krzysztof Czech
Comment 3
2013-09-23 03:41:50 PDT
Created
attachment 212339
[details]
Patch
Mario Sanchez Prada
Comment 4
2013-09-23 03:59:28 PDT
Comment on
attachment 212339
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=212339&action=review
> Tools/DumpRenderTree/atk/AccessibilityCallbacksAtk.cpp:131 > +#elif PLATFORM(EFL) && HAVE(ACCESSIBILITY)
The whole content of this file is wrapper inside an HAVE(ACCESSIBILITY) guard, so you don't need to add it explicitly here.
> Tools/DumpRenderTree/atk/AccessibilityCallbacksAtk.cpp:232 > +#elif PLATFORM(EFL) && HAVE(ACCESSIBILITY)
Same here
> Tools/DumpRenderTree/atk/AccessibilityCallbacksAtk.cpp:266 > +#elif PLATFORM(EFL) && HAVE(ACCESSIBILITY)
And here :)
> Tools/WebKitTestRunner/InjectedBundle/atk/AccessibilityNotificationHandlerAtk.cpp:116 > +#if PLATFORM(GTK) || (PLATFORM(EFL) && HAVE(ACCESSIBILITY))
In this case is different because this file is not guarded at all as the other ones. Perhaps we should do it here too? After all, this file does not make much sense at all if you don't have accessibility enabled, does it? :)
Krzysztof Czech
Comment 5
2013-09-23 04:13:41 PDT
> > Tools/DumpRenderTree/atk/AccessibilityCallbacksAtk.cpp:131
> > +#elif PLATFORM(EFL) && HAVE(ACCESSIBILITY) > > The whole content of this file is wrapper inside an HAVE(ACCESSIBILITY) guard, so you don't need to add it explicitly here. >
Indeed, sorry, I did not catch this.
> > Tools/WebKitTestRunner/InjectedBundle/atk/AccessibilityNotificationHandlerAtk.cpp:116 > > +#if PLATFORM(GTK) || (PLATFORM(EFL) && HAVE(ACCESSIBILITY)) > > In this case is different because this file is not guarded at all as the other ones. > > Perhaps we should do it here too? After all, this file does not make much sense at all if you don't have accessibility enabled, does it? :)
Yes, you're right, we should have this guard. Those are specific accessibility bits.
Krzysztof Czech
Comment 6
2013-09-23 06:36:59 PDT
Created
attachment 212344
[details]
Patch
Krzysztof Czech
Comment 7
2013-09-23 06:39:44 PDT
> In this case is different because this file is not guarded at all as the other ones. > > Perhaps we should do it here too? After all, this file does not make much sense at all if you don't have accessibility enabled, does it? :)
I will propose a new patch with guards
Mario Sanchez Prada
Comment 8
2013-09-23 08:23:02 PDT
Comment on
attachment 212344
[details]
Patch lgtm
WebKit Commit Bot
Comment 9
2013-09-23 08:46:36 PDT
Comment on
attachment 212344
[details]
Patch Clearing flags on attachment: 212344 Committed
r156273
: <
http://trac.webkit.org/changeset/156273
>
WebKit Commit Bot
Comment 10
2013-09-23 08:46:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug