[EFL] accessibility/aria-invalid is failing https://bugs.webkit.org/show_bug.cgi?id=111986

Patch by Krzysztof Czech <k.czech@samsung.com> on 2013-09-23
Reviewed by Mario Sanchez Prada.

Tools:

Adds possibility to retrieve JS context.
This is part of the implementation of AccessibilityUIElement::addNotificationListener
from 119883 and 120421.

* DumpRenderTree/atk/AccessibilityCallbacksAtk.cpp:
(axObjectEventListener):
(addAccessibilityNotificationHandler):
(removeAccessibilityNotificationHandler):
* WebKitTestRunner/InjectedBundle/atk/AccessibilityNotificationHandlerAtk.cpp:
(WTR::AccessibilityNotificationHandler::setNotificationFunctionCallback):
(WTR::AccessibilityNotificationHandler::removeAccessibilityNotificationHandler):

LayoutTests:

Test passes on both efk-wk2 and efl-wk1, because of the patches from bugs: 119883 and 120421.

* platform/efl-wk1/TestExpectations: Removed accessibility/aria-invalid.html
* platform/efl-wk2/TestExpectations: Removed accessibility/aria-invalid.html

Canonical link: https://commits.webkit.org/139784@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156273 268f45cc-cd09-0410-ab3c-d52691b4dbfc